--- a/.dockerignore
+++ b/.dockerignore
@@ -27,8 +27,13 @@ go.work.sum
 
 # env file
 .env
-_devops/backend.env
 
 # Editor/IDE
 .idea/
 .vscode/
+.zencoder/
+_docs/
+_devops/*.sh
+_devops/docker-compose.yml
+_devops/backend.*
+
